--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,6 +8,10 @@ header{
 	padding: 15px;
 }
 
+nav{
+	margin-top: 15px;
+}
+
 header nav a{
 	color: #333 !important;
 	text-shadow: none !important;
@@ -21,7 +25,42 @@ header nav a:hover{
 	margin-bottom: 20px;
 }
 
+.left{
+	margin: 0;
+}
+
+.right{
+	margin: 0;
+}
+
 .contenido{
 	background-color: #fff;
 	overflow: auto;
+	padding: 30px 0;
+}
+
+.imagen_nosotros{
+	float: right;
+	margin-left: 18px;
+	margin-bottom: 10px;
+}
+
+.nosotros p{
+	text-align: justify;
+}
+
+.social_icon{
+	float: left;
+	margin-right: 10px;
+}
+
+footer{
+	color: #ccc;
+	margin-top: 15px;
+	height: 108px;
+	background: #333 url("../images/bg_footer.png");
+}
+
+footer .row{
+	margin-top: 45px;
 }
