integracion de slide cross-browser
Integre el pluggin Jquery SlidesJS con el cual logre que se vea bien y
funcione en todos los navegadores (al menos en ie donde tuve problemas
anteriormente)

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -54,6 +54,10 @@ header nav a:hover{
 	margin-right: 10px;
 }
 
+.visita_catalogo{
+	border: 3px #333 solid;
+}
+
 footer{
 	color: #ccc;
 	margin-top: 15px;
@@ -63,4 +67,20 @@ footer{
 
 footer .row{
 	margin-top: 45px;
+}
+
+
+.slides_container {
+	width:750px;
+	display:none;
+}
+
+.slides_container div {
+	width:750px;
+	height:241px;
+	display:block;
+}
+
+.pagination{
+	display: none;
 }
