--- a/css/estilos.css
+++ b/css/estilos.css
@@ -37,6 +37,16 @@ header nav a:hover{
 	background-color: #fff;
 	overflow: auto;
 	padding: 30px 0;
+	font-family: Overlock;
+}
+
+#titulo_presentacion{
+	text-align: center;
+	margin-bottom: 45px;
+}
+
+.destacado, .current{
+	color: #a80505 !important;
 }
 
 .imagen_nosotros{
