--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,7 +22,7 @@ header nav a:hover{
 }
 
 .slide{
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 }
 
 .left{
@@ -36,8 +36,13 @@ header nav a:hover{
 .contenido{
 	background-color: #fff;
 	overflow: auto;
-	padding: 30px 0;
+	padding: 20px 0;
 	font-family: Overlock;
+}
+
+.presentacion{
+	margin-bottom: 50px;
+	font-size: 15px;
 }
 
 #titulo_presentacion{
@@ -90,7 +95,6 @@ footer .row{
 	z-index: 10;
 	width: 40px;
 	height: 40px;
-	color: #333;
 	background: url(../images/flecha_izq.png) no-repeat;
 }
 
@@ -101,13 +105,7 @@ footer .row{
 	z-index: 10;
 	width: 40px;
 	height: 40px;
-	color: #333;
 	background: url(../images/flecha_der.png) no-repeat;
-}
-
-
-.next:hover{
-	text-decoration: none;
 }
 
 .slides_container {
